--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
     box-sizing: inherit;
   }
 
-  .header{
+  .Header{
     text-align:center;
     font-size:24px;
     background-color:#f9f8e6;
@@ -29,9 +29,16 @@
     font-weight:bold;
   }
 
-  .header img:last-child{
+  .Header img:last-child{
     height:300px;
     cursor:pointer;
+  }
+
+  .Header p{
+    color:#2e2e2e;
+    position:absolute;
+    left:50%;
+    opacity:0.85;
   }
   
   #App {
@@ -128,7 +135,7 @@
     height:120px;
     border-radius:50%;
     cursor:pointer;
-    background-color:#fdfdf7;
+    background-color:#f9f8e6;
     border: 1px solid rgba(255, 139, 139, 0.4);
     box-shadow: rgba(255, 139, 139, 0.4) 5px 5px, rgba(255, 139, 139, 0.3) 10px 10px, rgba(255, 139, 139, 0.2) 15px 15px, rgba(255, 139, 139, 0.1) 20px 20px, rgba(255, 139, 139, 0.05) 25px 25px;
   }
@@ -157,6 +164,8 @@
     grid-gap: 10px;
     background-color:#fdfdf7;
     padding:30px;
+    text-align:center;
+    min-height:1000px;
   }
   
   .SearchResult img {
@@ -171,6 +180,43 @@
     display: inline-block;
     margin: 0 0 1em;
     width: 100%;
+  }
+
+  .Loading{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+  }
+
+  .LoadingSpinner,
+  .LoadingSpinner:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+  }
+  .LoadingSpinner {
+    margin: 60px auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(255,139,139, 0.7);
+    border-right: 1.1em solid rgba(255,139,139, 0.7);
+    border-bottom: 1.1em solid rgba(255,139,139, 0.7);
+    border-left: 1.1em solid #fdfdf7;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+  }
+
+
+  .LoadingMessage{
+    font-size:48px;
+    font-weight:bold;
+    opacity:0.7;
+    margin:0;
   }
   
 
@@ -208,6 +254,26 @@
     width: 100%;
   }
 
+  @-webkit-keyframes load8 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes load8 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
   @media screen and (max-width:768px){
     .ImageInfo .content-wrapper{
       width:95%;
