--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,10 @@
    }
   
   html {
-    box-sizing: border-box;
   }
   
   body {
+    height:100%;
     margin:0;
     background-color:#fdfdf7;
   }
@@ -32,6 +32,10 @@
   .Header img:last-child{
     height:300px;
     cursor:pointer;
+  }
+
+  .Header img:hover{
+    transform:scale(1.04)
   }
 
   .Header p{
@@ -165,7 +169,7 @@
     background-color:#fdfdf7;
     padding:30px;
     text-align:center;
-    min-height:1000px;
+    min-height:600px;
   }
   
   .SearchResult img {
@@ -173,6 +177,10 @@
     height: 100%;
     object-fit: cover;
     border-radius:5px;
+  }
+
+  .CatGif{
+    object-fit: contain !important;
   }
   
   .SearchResult .item {
@@ -217,6 +225,7 @@
     font-weight:bold;
     opacity:0.7;
     margin:0;
+    padding-bottom:100px;
   }
   
 
