--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,7 @@
   }
 
   .SearchHistory ul{
+    padding: 0 10px 0 10px;
     list-style:none;
     display:flex;
     justify-content:center;
@@ -299,7 +300,7 @@
         flex-direction:column !important;
     }
     #App{
-      border-width : 15px 0px 0px 0px;
+      border-width : 20px 0px 0px 0px;
       border-color: #ff8b8b;
       border-radius: 0;
       box-shadow:none;
@@ -329,36 +330,3 @@
     }
   }
   */
-  
-
-// 반응형 처리
-.RandomButton{
-  position:fixed;
-  right:50px;;
-  bottom:50px;
-  width:120px;
-  height:120px;
-  border-radius:50%;
-  cursor:pointer;
-  background-color:#f9f8e6;
-  border: 1px solid rgba(255, 139, 139, 0.4);
-  box-shadow: rgba(255, 139, 139, 0.4) 5px 5px, rgba(255, 139, 139, 0.3) 10px 10px, rgba(255, 139, 139, 0.2) 15px 15px, rgba(255, 139, 139, 0.1) 20px 20px, rgba(255, 139, 139, 0.05) 25px 25px;
-}
-
-.RandomButton img{
-  position:fixed;
-  right:47px;;
-  bottom:47px;
-  width:120px;
-  border-radius:50%;
-}
-
-.RandomButton span{
-  position:fixed;
-  bottom:175px;
-  right:70px;
-  font-size:24px;
-  font-weight:bold;
-  color:#2e2e2e;
-  opacity:0.9;
-}
