--- a/src/style.css
+++ b/src/style.css
@@ -199,11 +199,15 @@
     cursor:pointer;
   }
 
+  .SearchResult .item:hover {
+    opacity:0.8
+  }
+
   .Loading{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .LoadingSpinner,
@@ -217,10 +221,10 @@
     font-size: 10px;
     position: relative;
     text-indent: -9999em;
-    border-top: 1.1em solid rgba(255,139,139, 0.7);
-    border-right: 1.1em solid rgba(255,139,139, 0.7);
-    border-bottom: 1.1em solid rgba(255,139,139, 0.7);
-    border-left: 1.1em solid #fdfdf7;
+    border-top: 2em solid rgba(255,139,139, 0.8);
+    border-right: 2em solid rgba(255,139,139, 0.8);
+    border-bottom: 2em solid rgba(255,139,139, 0.8);
+    border-left: 2em solid #fdfdf7;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
@@ -230,11 +234,13 @@
 
 
   .LoadingMessage{
-    font-size:3vh;
+    font-size:5vh;
     font-weight:bold;
-    opacity:0.7;
+    opacity:0.9;
     margin:0;
     padding-bottom:100px;
+    color:white;
+    text-shadow: 2px 2px 2px gray; 
   }
   
 
