--- a/src/style.css
+++ b/src/style.css
@@ -204,10 +204,14 @@
   }
 
   .Loading{
-    position: absolute;
+    z-index: 3;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .LoadingSpinner,
@@ -271,7 +275,7 @@
     background-color: #fff;
     border: 1px solid #eee;
     border-radius: 5px;
-    
+    font-size:1.5vh;
   }
   
   .ImageInfo .content-wrapper img {
