--- a/src/style.css
+++ b/src/style.css
@@ -249,12 +249,17 @@
   
 
   .ImageInfo {
+    animation : fadein 1s forwards;
     position: fixed;
     left: 0;
     top: 0;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .ImageInfo .invisible{
+    animation : fadeout 0.01s forwards;
   }
   
   .ImageInfo .title {
@@ -281,6 +286,25 @@
   .ImageInfo .content-wrapper img {
     width: 100%;
   }
+
+  @keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeout {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  
 
   @-webkit-keyframes load8 {
     0% {
