랜덤 버튼 폰트 컬러 추가

--- a/src/style.css
+++ b/src/style.css
@@ -191,6 +191,7 @@
     background-color:var(--header-color);
     border: 1px solid rgba(255, 139, 139, 0.4);
     box-shadow: rgba(255, 139, 139, 0.4) 5px 5px, rgba(255, 139, 139, 0.3) 10px 10px, rgba(255, 139, 139, 0.2) 15px 15px, rgba(255, 139, 139, 0.1) 20px 20px, rgba(255, 139, 139, 0.05) 25px 25px;
+    color:var(--font-color);
   }
 
   .RandomButton img{
